--- a/Ecommerce.Repositorio/Ecommerce.Repositorio.csproj
+++ b/Ecommerce.Repositorio/Ecommerce.Repositorio.csproj
@@ -10,4 +10,11 @@
     <ProjectReference Include="..\Ecommerce.Model\Ecommerce.Modelo.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.11">
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
+  </ItemGroup>
+
 </Project>
