--- a/Ecommerce.WebAssembly/Ecommerce.WebAssembly.csproj
+++ b/Ecommerce.WebAssembly/Ecommerce.WebAssembly.csproj
@@ -19,4 +19,10 @@
     <ProjectReference Include="..\Ecommerce.DTO\Ecommerce.DTO.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Content Update="Pages\Admin\Filtro.razor">
+      <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+    </Content>
+  </ItemGroup>
+
 </Project>
