--- a/Ecommerce.Servicio/Ecommerce.Servicio.csproj
+++ b/Ecommerce.Servicio/Ecommerce.Servicio.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="MailKit" Version="4.8.0" />
     <PackageReference Include="RabbitMQ.Client" Version="6.8.1" />
     <PackageReference Include="SendGrid" Version="9.29.3" />
+    <PackageReference Include="Microsoft.Extensions.Identity.Core" Version="7.0.5" />
   </ItemGroup>
 
   <ItemGroup>
