Algunos cambios previos a la refactorización total

--- a/Ecommerce.API/appsettings.json
+++ b/Ecommerce.API/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "CadenaSQL": "Server=Manna\\SQLEXPRESS; DataBase=DBEcommerce; Trusted_Connection=True; TrustServerCertificate=True;"
+    "EcommerceDB": "Server=Manna\\SQLEXPRESS;Database=DBEcommerce;Trusted_Connection=True;TrustServerCertificate=True;"
   },
   "Logging": {
     "LogLevel": {
